# elvex-v2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: main_local.py  main_local_old.py
src/elvex/agents/: 1_task_specifier.py  3_task_evaluator.py  base_worker_agent.py  base_working_agent.py  contracts.py  divider.py  evaluator.py  gatherer.py  gatherer_subagents.py  gatherer_subtasks.py  orchestrator.py  retry.py  specifier.py  subtasks_gatherer.py  task_divider.py  task_evaluator.py
src/elvex/api/: __init__.py  app.py  routes.py  schemas.py
src/elvex/cli/: main.py
src/elvex/config/: settings.py
src/elvex/core/: context.py  errors.py  orchestrator.py  task_graph.py  workflow.py
src/elvex/llms/: errors.py  registry.py  types.py
src/elvex/llms/clients/: claude_client.py  ollama_client.py  openai_client.py
src/elvex/mcp/: server.py
src/elvex/observability/: __init__.py  langfuse_observer.py
src/elvex/prompts/: agent_orchestrator.md  prompts.py  subagents_gatherer_prompt.md  task_divider_prompt.md  task_evaluator_prompt.md  task_specifier_prompt.md
src/elvex/services/: __init__.py  workflow_service.py
src/elvex/tools/: __init__.py  builtin_tools.py  interfaces.py  local_tools (1).py  local_tools.py  policy.py  registry.py
src/elvex/utils/: loader.py  logging.py
tests/: test_api.py  test_cli.py  test_langfuse_observer.py  test_loader.py  test_main_local.py  test_openai_client_errors.py  test_reliability.py  test_task_graph.py  test_tools.py  test_workflow.py
