[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elvex-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openai",
  "anthropic",
  "tqdm",
  "requests",
  "ollama",
  "langchain",
  "langgraph",
  "chromadb",
  "python-dotenv",
  "pydantic",
  "ipython",
  "jupyter",
  "ipykernel",
  "pandas",
  "numpy",
  "scikit-learn",
  "torch",
  "transformers",
  "tokenizers",
  "datasets",
  "evaluate",
  "sentencepiece",
  "safetensors",
  "huggingface-hub",
  "peft",
  "trl",
  "optimum",
  "sentence-transformers",
  "pytest",
  "langfuse",
  "simpleeval>=1.0.7",
  "pydantic-settings>=2.14.1",
  "fastmcp>=3.4.2",
  "uvicorn>=0.38.0",
  "fastapi>=0.139.0",
  "httpx2>=2.6.0",
]

[project.scripts]
elvex = "elvex.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
